# subclass-register

./: .readthedocs.yml  README.rst  setup.cfg  setup.py
docs/source/: conf.py  index.rst
src/subclass_register/: __init__.py  subclass_register.py
