[metadata]
name = subclass-register
version = 1.0.0
license = MIT
description = Automatically log all new subclasses of a specified base class.
long_description = file: README.rst
author = Yngve Mardal Moe
author_email = yngve.m.moe@gmail.com

[options]
packages = find:src
package_dir = 
    =src
include_package_data = True
